[BUGFIX] app has vertical scrollbar due to menu

--- a/Resources/Public/Stylesheets/Partials/Menu.less
+++ b/Resources/Public/Stylesheets/Partials/Menu.less
@@ -2,6 +2,7 @@ div.project-buttons {
 	padding: 10px 0;
 	background-color: @main-color !important;
 	width: 100%;
+	overflow: hidden;
 	.fa {
 		font-size: 130%;
 	}
